--- a/docs/items/dusts/aluminum_dust.mdx
+++ b/docs/items/dusts/aluminum_dust.mdx
@@ -10,24 +10,24 @@ title: Aluminum Dust
 
 ## Recipe
 
-<Machine next={{input: [{id: "techreborn:aluminum_ingot"}], output: [{id: "techreborn:aluminum_dust"}], tool: "techreborn:grinder"}} />
+<Machine config={{input: [{id: "techreborn:aluminum_ingot"}], output: [{id: "techreborn:aluminum_dust"}], tool: "techreborn:grinder"}} />
 
-<Machine next={{input: [{id: "techreborn:bauxite_ore"}, {id: "techreborn:water_cell"}], output: [{id: "techreborn:bauxite_dust", qty: 2}, {id: "techreborn:aluminum_dust"}], tool: "techreborn:industrial_grinder"}} />
-<Machine next={{input: [{id: "techreborn:sodalite_ore"}, {id: "techreborn:water_cell"}], output: [{id: "techreborn:sodalite_dust", qty: 12}, {id: "techreborn:aluminum_dust", qty: 3}], tool: "techreborn:industrial_grinder"}} />
+<Machine config={{input: [{id: "techreborn:bauxite_ore"}, {id: "techreborn:water_cell"}], output: [{id: "techreborn:bauxite_dust", qty: 2}, {id: "techreborn:aluminum_dust"}], tool: "techreborn:industrial_grinder"}} />
+<Machine config={{input: [{id: "techreborn:sodalite_ore"}, {id: "techreborn:water_cell"}], output: [{id: "techreborn:sodalite_dust", qty: 12}, {id: "techreborn:aluminum_dust", qty: 3}], tool: "techreborn:industrial_grinder"}} />
 
-<Machine next={{input: [{id: "techreborn:clay_dust", qty: 8}, {id: "techreborn:empty_cell", qty: 5}], output: [{id: "techreborn:lithium_cell"}, {id: "techreborn:silicon_cell", qty: 2}, {id: "techreborn:aluminum_dust", qty: 2}, {id: "techreborn:sodium_cell", qty: 2}], tool: "techreborn:industrial_electrolyzer"}} />
-<Machine next={{input: [{id: "techreborn:lazurite_dust", qty: 29}, {id: "techreborn:empty_cell", qty: 10}], output: [{id: "techreborn:aluminum_dust", qty: 3}, {id: "techreborn:silicon_cell", qty: 3}, {id: "techreborn:calcium_cell", qty: 2}, {id: "techreborn:sodium_cell", qty: 4}], tool: "techreborn:industrial_electrolyzer"}} />
-<Machine next={{input: [{id: "techreborn:sodalite_dust", qty: 23}, {id: "techreborn:empty_cell", qty: 8}], output: [{id: "techreborn:sodium_cell", qty: 4}, {id: "techreborn:aluminum_dust", qty: 3}, {id: "techreborn:silicon_cell", qty: 3}, {id: "techreborn:chlorite_cell"}], tool: "techreborn:industrial_electrolyzer"}} />
-<Machine next={{input: [{id: "techreborn:bauxite_dust", qty: 12}, {id: "techreborn:empty_cell", qty: 8}], output: [{id: "techreborn:aluminum_dust", qty: 8}, {id: "techreborn:small_pile_of_titanium_dust", qty: 2}, {id: "techreborn:hydrogen_cell", qty: 5}, {id: "techreborn:compressed_air_cell", qty: 3}], tool: "techreborn:industrial_electrolyzer"}} />
-<Machine next={{input: [{id: "techreborn:ruby_dust", qty: 9}, {id: "techreborn:empty_cell", qty: 3}], output: [{id: "techreborn:aluminum_dust", qty: 2}, {id: "techreborn:chrome_dust"}, {id: "techreborn:compressed_air_cell", qty: 3}], tool: "techreborn:industrial_electrolyzer"}} />
-<Machine next={{input: [{id: "techreborn:sapphire_dust", qty: 8}, {id: "techreborn:empty_cell", qty: 3}], output: [{id: "techreborn:aluminum_dust", qty: 2}, {id: "techreborn:compressed_air_cell", qty: 3}], tool: "techreborn:industrial_electrolyzer"}} />
-<Machine next={{input: [{id: "techreborn:emerald_dust", qty: 29}, {id: "techreborn:empty_cell", qty: 18}], output: [{id: "techreborn:aluminum_dust", qty: 2}, {id: "techreborn:beryllium_cell", qty: 3}, {id: "techreborn:silicon_cell", qty: 6}, {id: "techreborn:compressed_air_cell", qty: 9}], tool: "techreborn:industrial_electrolyzer"}} />
-<Machine next={{input: [{id: "techreborn:pyrope_dust", qty: 20}, {id: "techreborn:empty_cell", qty: 9}], output: [{id: "techreborn:magnesium_dust", qty: 3}, {id: "techreborn:aluminum_dust", qty: 2}, {id: "techreborn:silicon_cell", qty: 3}, {id: "techreborn:compressed_air_cell", qty: 6}], tool: "techreborn:industrial_electrolyzer"}} />
-<Machine next={{input: [{id: "techreborn:almandine_dust", qty: 20}, {id: "techreborn:empty_cell", qty: 9}], output: [{id: "techreborn:iron_dust", qty: 3}, {id: "techreborn:aluminum_dust", qty: 2}, {id: "techreborn:silicon_cell", qty: 3}, {id: "techreborn:compressed_air_cell", qty: 6}], tool: "techreborn:industrial_electrolyzer"}} />
-<Machine next={{input: [{id: "techreborn:spessartine_dust", qty: 20}, {id: "techreborn:empty_cell", qty: 9}], output: [{id: "techreborn:aluminum_dust", qty: 2}, {id: "techreborn:manganese_dust", qty: 3}, {id: "techreborn:silicon_cell", qty: 3}, {id: "techreborn:compressed_air_cell", qty: 6}], tool: "techreborn:industrial_electrolyzer"}} />
-<Machine next={{input: [{id: "techreborn:grossular_dust", qty: 20}, {id: "techreborn:empty_cell", qty: 12}], output: [{id: "techreborn:calcium_cell", qty: 3}, {id: "techreborn:aluminum_dust", qty: 2}, {id: "techreborn:silicon_cell", qty: 3}, {id: "techreborn:compressed_air_cell", qty: 6}], tool: "techreborn:industrial_electrolyzer"}} />
+<Machine config={{input: [{id: "techreborn:clay_dust", qty: 8}, {id: "techreborn:empty_cell", qty: 5}], output: [{id: "techreborn:lithium_cell"}, {id: "techreborn:silicon_cell", qty: 2}, {id: "techreborn:aluminum_dust", qty: 2}, {id: "techreborn:sodium_cell", qty: 2}], tool: "techreborn:industrial_electrolyzer"}} />
+<Machine config={{input: [{id: "techreborn:lazurite_dust", qty: 29}, {id: "techreborn:empty_cell", qty: 10}], output: [{id: "techreborn:aluminum_dust", qty: 3}, {id: "techreborn:silicon_cell", qty: 3}, {id: "techreborn:calcium_cell", qty: 2}, {id: "techreborn:sodium_cell", qty: 4}], tool: "techreborn:industrial_electrolyzer"}} />
+<Machine config={{input: [{id: "techreborn:sodalite_dust", qty: 23}, {id: "techreborn:empty_cell", qty: 8}], output: [{id: "techreborn:sodium_cell", qty: 4}, {id: "techreborn:aluminum_dust", qty: 3}, {id: "techreborn:silicon_cell", qty: 3}, {id: "techreborn:chlorite_cell"}], tool: "techreborn:industrial_electrolyzer"}} />
+<Machine config={{input: [{id: "techreborn:bauxite_dust", qty: 12}, {id: "techreborn:empty_cell", qty: 8}], output: [{id: "techreborn:aluminum_dust", qty: 8}, {id: "techreborn:small_pile_of_titanium_dust", qty: 2}, {id: "techreborn:hydrogen_cell", qty: 5}, {id: "techreborn:compressed_air_cell", qty: 3}], tool: "techreborn:industrial_electrolyzer"}} />
+<Machine config={{input: [{id: "techreborn:ruby_dust", qty: 9}, {id: "techreborn:empty_cell", qty: 3}], output: [{id: "techreborn:aluminum_dust", qty: 2}, {id: "techreborn:chrome_dust"}, {id: "techreborn:compressed_air_cell", qty: 3}], tool: "techreborn:industrial_electrolyzer"}} />
+<Machine config={{input: [{id: "techreborn:sapphire_dust", qty: 8}, {id: "techreborn:empty_cell", qty: 3}], output: [{id: "techreborn:aluminum_dust", qty: 2}, {id: "techreborn:compressed_air_cell", qty: 3}], tool: "techreborn:industrial_electrolyzer"}} />
+<Machine config={{input: [{id: "techreborn:emerald_dust", qty: 29}, {id: "techreborn:empty_cell", qty: 18}], output: [{id: "techreborn:aluminum_dust", qty: 2}, {id: "techreborn:beryllium_cell", qty: 3}, {id: "techreborn:silicon_cell", qty: 6}, {id: "techreborn:compressed_air_cell", qty: 9}], tool: "techreborn:industrial_electrolyzer"}} />
+<Machine config={{input: [{id: "techreborn:pyrope_dust", qty: 20}, {id: "techreborn:empty_cell", qty: 9}], output: [{id: "techreborn:magnesium_dust", qty: 3}, {id: "techreborn:aluminum_dust", qty: 2}, {id: "techreborn:silicon_cell", qty: 3}, {id: "techreborn:compressed_air_cell", qty: 6}], tool: "techreborn:industrial_electrolyzer"}} />
+<Machine config={{input: [{id: "techreborn:almandine_dust", qty: 20}, {id: "techreborn:empty_cell", qty: 9}], output: [{id: "techreborn:iron_dust", qty: 3}, {id: "techreborn:aluminum_dust", qty: 2}, {id: "techreborn:silicon_cell", qty: 3}, {id: "techreborn:compressed_air_cell", qty: 6}], tool: "techreborn:industrial_electrolyzer"}} />
+<Machine config={{input: [{id: "techreborn:spessartine_dust", qty: 20}, {id: "techreborn:empty_cell", qty: 9}], output: [{id: "techreborn:aluminum_dust", qty: 2}, {id: "techreborn:manganese_dust", qty: 3}, {id: "techreborn:silicon_cell", qty: 3}, {id: "techreborn:compressed_air_cell", qty: 6}], tool: "techreborn:industrial_electrolyzer"}} />
+<Machine config={{input: [{id: "techreborn:grossular_dust", qty: 20}, {id: "techreborn:empty_cell", qty: 12}], output: [{id: "techreborn:calcium_cell", qty: 3}, {id: "techreborn:aluminum_dust", qty: 2}, {id: "techreborn:silicon_cell", qty: 3}, {id: "techreborn:compressed_air_cell", qty: 6}], tool: "techreborn:industrial_electrolyzer"}} />
 
 ## Usage
 
-<Machine next={{input: [{id: "techreborn:aluminum_dust"}], output: [{id: "techreborn:aluminum_ingot"}], tool: "techreborn:blast_furnace"}} />
+<Machine config={{input: [{id: "techreborn:aluminum_dust"}], output: [{id: "techreborn:aluminum_ingot"}], tool: "techreborn:blast_furnace"}} />
 _Requires Industrial Blast Furnace with 1700 heat._
