--- a/docs/items/dusts/amethyst_dust.mdx
+++ b/docs/items/dusts/amethyst_dust.mdx
@@ -10,9 +10,9 @@ title: Amethyst Dust
 
 ## Recipes
 
-<Machine next={{input: [{id: "minecraft:amethyst_block"}], output: [{id: "techreborn:amethyst_dust", qty: 2}], tool: "techreborn:grinder"}} />
+<Machine config={{input: [{id: "minecraft:amethyst_block"}], output: [{id: "techreborn:amethyst_dust", qty: 2}], tool: "techreborn:grinder"}} />
 
-<Machine next={{input: [
+<Machine config={{input: [
   {id: "techreborn:amethyst_dust", qty: 8},
   {id: "minecraft:TNT", qty: 16}
 ], output: [
