--- a/docs/items/dusts/basalt_dust.mdx
+++ b/docs/items/dusts/basalt_dust.mdx
@@ -16,7 +16,7 @@ title: Basalt Dust
 
 <CraftingTable recipe="input air air air input air techreborn:basalt_dust air input air air air output techreborn:small_pile_of_basalt_dust,4"/>
 
-<Machine next={{input: [{id: "techreborn:basalt_dust", qty: 16}], output: [
+<Machine config={{input: [{id: "techreborn:basalt_dust", qty: 16}], output: [
   {id: "techreborn:peridot_dust"},
   {id: "techreborn:calcite_dust", qty: 3},
   {id: "techreborn:flint_dust", qty: 8},
