--- a/docs/items/dusts/charcoal_dust.mdx
+++ b/docs/items/dusts/charcoal_dust.mdx
@@ -12,13 +12,13 @@ title: Charcoal Dust
 
 <CraftingTable recipe="input techreborn:small_pile_of_charcoal_dust techreborn:small_pile_of_charcoal_dust air input techreborn:small_pile_of_charcoal_dust techreborn:small_pile_of_charcoal_dust air input air air air output techreborn:charcoal_dust"/>
 
-<Machine next={{input: [{id: "minecraft:charcoal"}], output: [{id: "techreborn:charcoal_dust"}], tool: "techreborn:grinder"}} />
+<Machine config={{input: [{id: "minecraft:charcoal"}], output: [{id: "techreborn:charcoal_dust"}], tool: "techreborn:grinder"}} />
 
 ## Usage
 
 <CraftingTable recipe="input air air air input air techreborn:charcoal_dust air input air air air output techreborn:small_pile_of_charcoal_dust,4"/>
 
-<Machine next={{input: [
+<Machine config={{input: [
   {id: "techreborn:charcoal_dust"},
   {id: "techreborn:empty_cell"}
 ], output: [
