--- a/docs/items/dusts/invar_dust.mdx
+++ b/docs/items/dusts/invar_dust.mdx
@@ -12,10 +12,10 @@ title: Invar Dust
 
 <CraftingTable recipe="input techreborn:small_pile_of_invar_dust techreborn:small_pile_of_invar_dust air input techreborn:small_pile_of_invar_dust techreborn:small_pile_of_invar_dust air input air air air output techreborn:invar_dust"/>
 
-<Machine next={{input: [{id: "techreborn:invar_ingot"}], output: [{id: "techreborn:invar_dust"}], tool: "techreborn:grinder"}} />
+<Machine config={{input: [{id: "techreborn:invar_ingot"}], output: [{id: "techreborn:invar_dust"}], tool: "techreborn:grinder"}} />
 
 ## Usage
 
 <CraftingTable recipe="input air air air input air techreborn:invar_dust air input air air air output techreborn:small_pile_of_invar_dust,4"/>
 
-<Machine next={{input: [{id: "techreborn:invar_dust"}], output: [{id: "techreborn:invar_ingot"}], tool: "techreborn:iron_furnace"}} />
+<Machine config={{input: [{id: "techreborn:invar_dust"}], output: [{id: "techreborn:invar_ingot"}], tool: "techreborn:iron_furnace"}} />
