--- a/docs/items/dusts/manganese_dust.mdx
+++ b/docs/items/dusts/manganese_dust.mdx
@@ -12,7 +12,7 @@ title: Manganese Dust
 
 <CraftingTable recipe="input techreborn:small_pile_of_manganese_dust techreborn:small_pile_of_manganese_dust air input techreborn:small_pile_of_manganese_dust techreborn:small_pile_of_manganese_dust air input air air air output techreborn:manganese_dust"/>
 
-<Machine next={{input: [
+<Machine config={{input: [
   {id: "techreborn:spessartine_dust", qty: 20},
   {id: "techreborn:empty_cell", qty: 9}
 ], output: [
