--- a/docs/items/dusts/marble_dust.mdx
+++ b/docs/items/dusts/marble_dust.mdx
@@ -16,7 +16,7 @@ title: Marble Dust
 
 <CraftingTable recipe="input air air air input air techreborn:marble_dust air input air air air output techreborn:small_pile_of_marble_dust,4"/>
 
-<Machine next={{input: [{id: "techreborn:marble_dust"}], output: [
+<Machine config={{input: [{id: "techreborn:marble_dust"}], output: [
   {id: "techreborn:magnesium_dust"},
   {id: "techreborn:calcite_dust", qty: 7}
 ], tool: "techreborn:industrial_centrifuge"}} />
