--- a/docs/items/dusts/pyrope_dust.mdx
+++ b/docs/items/dusts/pyrope_dust.mdx
@@ -12,7 +12,7 @@ title: Pyrope Dust
 
 <CraftingTable recipe="input techreborn:small_pile_of_pyrope_dust techreborn:small_pile_of_pyrope_dust air input techreborn:small_pile_of_pyrope_dust techreborn:small_pile_of_pyrope_dust air input air air air output techreborn:pyrope_dust"/>
 
-<Machine next={{input: [{id: "techreborn:red_garnet_dust", qty: 16}], output: [
+<Machine config={{input: [{id: "techreborn:red_garnet_dust", qty: 16}], output: [
   {id: "techreborn:pyrope_dust", qty: 3},
   {id: "techreborn:almandine_dust", qty: 5},
   {id: "techreborn:spessartine_dust", qty: 8}
@@ -20,7 +20,7 @@ title: Pyrope Dust
 
 ## Usage
 
-<Machine next={{input: [
+<Machine config={{input: [
   {id: "techreborn:pyrope_dust", qty: 20},
   {id: "techreborn:empty_cell", qty: 9}
 ], output: [
