--- a/docs/items/dusts/saltpeter_dust.mdx
+++ b/docs/items/dusts/saltpeter_dust.mdx
@@ -12,7 +12,7 @@ title: Saltpeter Dust
 
 <CraftingTable recipe="input techreborn:small_pile_of_saltpeter_dust techreborn:small_pile_of_saltpeter_dust air input techreborn:small_pile_of_saltpeter_dust techreborn:small_pile_of_saltpeter_dust air input air air air output techreborn:saltpeter_dust"/>
 
-<Machine next={{input: [
+<Machine config={{input: [
   {id: "minecraft:soul_sand", qty: 16},
   {id: "techreborn:empty_cell"}
 ], output: [
@@ -26,7 +26,7 @@ title: Saltpeter Dust
 
 <CraftingTable recipe="input air air air input air techreborn:saltpeter_dust air input air air air output techreborn:small_pile_of_saltpeter_dust,4"/>
 
-<Machine next={{input: [
+<Machine config={{input: [
   {id: "techreborn:saltpeter_dust", qty: 10},
   {id: "techreborn:empty_cell", qty: 7}
 ], output: [
