--- a/docs/items/dusts/saw_dust.mdx
+++ b/docs/items/dusts/saw_dust.mdx
@@ -12,7 +12,7 @@ title: Saw Dust
 
 <CraftingTable recipe="input techreborn:small_pile_of_saw_dust techreborn:small_pile_of_saw_dust air input techreborn:small_pile_of_saw_dust techreborn:small_pile_of_saw_dust air input air air air output techreborn:saw_dust"/>
 
-<Machine next={{input: [
+<Machine config={{input: [
   {id: "minecraft:wood"},
   {id: "techreborn:water_cell"}
 ], output: [
@@ -27,7 +27,7 @@ title: Saw Dust
 
 <CraftingTable recipe="input techreborn:saw_dust techreborn:saw_dust techreborn:saw_dust input minecraft:water_bucket air air input air air air output minecraft:paper,3"/>
 
-<Machine next={{input: [
+<Machine config={{input: [
   {id: "techreborn:saw_dust", qty: 2}
 ], output: [
   {id: "techreborn:wooden_plate"}
