--- a/docs/items/dusts/steel_dust.mdx
+++ b/docs/items/dusts/steel_dust.mdx
@@ -12,10 +12,10 @@ title: Steel Dust
 
 <CraftingTable recipe="input techreborn:small_pile_of_steel_dust techreborn:small_pile_of_steel_dust air input techreborn:small_pile_of_steel_dust techreborn:small_pile_of_steel_dust air input air air air output techreborn:steel_dust"/>
 
-<Machine next={{input: [{id: "techreborn:steel_ingot"}], output: [{id: "techreborn:steel_dust"}], tool: "techreborn:grinder"}} />
+<Machine config={{input: [{id: "techreborn:steel_ingot"}], output: [{id: "techreborn:steel_dust"}], tool: "techreborn:grinder"}} />
 
 ## Usage
 
 <CraftingTable recipe="input air air air input air techreborn:steel_dust air input air air air output techreborn:small_pile_of_steel_dust,4"/>
 
-<Machine next={{input: [{id: "techreborn:steel_dust"}], output: [{id: "techreborn:steel_ingot"}], tool: "techreborn:blast_furnace"}} />
+<Machine config={{input: [{id: "techreborn:steel_dust"}], output: [{id: "techreborn:steel_ingot"}], tool: "techreborn:blast_furnace"}} />
