--- a/docs/items/dusts/titanium_dust.mdx
+++ b/docs/items/dusts/titanium_dust.mdx
@@ -16,10 +16,10 @@ Later, <McItem slug="techreborn:titanium_dust" /> is best acquired by crafting f
 
 <CraftingTable recipe="input techreborn:small_pile_of_titanium_dust techreborn:small_pile_of_titanium_dust air input techreborn:small_pile_of_titanium_dust techreborn:small_pile_of_titanium_dust air input air air air output techreborn:titanium_dust"/>
 
-<Machine next={{input: [{id: "techreborn:titanium_ingot"}], output: [{id: "techreborn:titanium_dust"}], tool: "techreborn:grinder"}} />
+<Machine config={{input: [{id: "techreborn:titanium_ingot"}], output: [{id: "techreborn:titanium_dust"}], tool: "techreborn:grinder"}} />
 
 ## Usage
 
 <CraftingTable recipe="input air air air input air techreborn:titanium_dust air input air air air output techreborn:small_pile_of_titanium_dust,4"/>
 
-<Machine next={{input: [{id: "techreborn:titanium_dust"}], output: [{id: "techreborn:titanium_ingot"}], tool: "techreborn:blast_furnace"}} />
+<Machine config={{input: [{id: "techreborn:titanium_dust"}], output: [{id: "techreborn:titanium_ingot"}], tool: "techreborn:blast_furnace"}} />
