--- a/docs/items/dusts/yellow_garnet_dust.mdx
+++ b/docs/items/dusts/yellow_garnet_dust.mdx
@@ -12,12 +12,12 @@ title: Yellow Garnet Dust
 
 <CraftingTable recipe="input techreborn:small_pile_of_yellow_garnet_dust techreborn:small_pile_of_yellow_garnet_dust air input techreborn:small_pile_of_yellow_garnet_dust techreborn:small_pile_of_yellow_garnet_dust air input air air air output techreborn:yellow_garnet_dust"/>
 
-<Machine next={{input: [{id: "techreborn:yellow_garnet", qty: 1}], output: [{id: "techreborn:yellow_garnet_dust", qty: 1}], tool: "techreborn:grinder"}} />
+<Machine config={{input: [{id: "techreborn:yellow_garnet", qty: 1}], output: [{id: "techreborn:yellow_garnet_dust", qty: 1}], tool: "techreborn:grinder"}} />
 
 ## Usage
 
-<Machine next={{input: [{id: "techreborn:yellow_garnet_dust", qty: 16}], output: [{id: "techreborn:andradite_dust", qty: 5}, {id: "techreborn:grossular_dust", qty: 8}, {id: "techreborn:uvarovite_dust", qty: 3}], tool: "techreborn:industrial_centrifuge"}} />
+<Machine config={{input: [{id: "techreborn:yellow_garnet_dust", qty: 16}], output: [{id: "techreborn:andradite_dust", qty: 5}, {id: "techreborn:grossular_dust", qty: 8}, {id: "techreborn:uvarovite_dust", qty: 3}], tool: "techreborn:industrial_centrifuge"}} />
 
 <CraftingTable recipe="input air air air input air techreborn:yellow_garnet_dust air input air air air output techreborn:small_pile_of_yellow_garnet_dust,4"/>
 
-<Machine next={{input: [{id: "techreborn:yellow_garnet_dust", qty: 4}, {id: "minecraft:tnt", qty: 16}], output: [{id: "techreborn:yellow_garnet", qty: 3}, {id: "techreborn:dark_ashes", qty: 8}], tool: "techreborn:implosion_compressor"}} />
+<Machine config={{input: [{id: "techreborn:yellow_garnet_dust", qty: 4}, {id: "minecraft:tnt", qty: 16}], output: [{id: "techreborn:yellow_garnet", qty: 3}, {id: "techreborn:dark_ashes", qty: 8}], tool: "techreborn:implosion_compressor"}} />
