--- a/docs/items/dusts/zinc_dust.mdx
+++ b/docs/items/dusts/zinc_dust.mdx
@@ -12,24 +12,24 @@ title: Zinc Dust
 
 <CraftingTable recipe="input techreborn:small_pile_of_zinc_dust techreborn:small_pile_of_zinc_dust air input techreborn:small_pile_of_zinc_dust techreborn:small_pile_of_zinc_dust air input air air air output techreborn:zinc_dust"/>
 
-<Machine next={{input: [{id: "techreborn:zinc_ingot", qty: 1}], output: [{id: "techreborn:zinc_dust", qty: 1}], tool: "techreborn:grinder"}} />
+<Machine config={{input: [{id: "techreborn:zinc_ingot", qty: 1}], output: [{id: "techreborn:zinc_dust", qty: 1}], tool: "techreborn:grinder"}} />
 
-<Machine next={{input: [{id: "techreborn:tin_ore", qty: 1}, {id: "techreborn:sodiumpersulfate_cell", qty: 1}], output: [{id: "techreborn:tin_dust", qty: 2}, {id: "techreborn:small_pile_of_iron_dust", qty: 1}, {id: "techreborn:zinc_dust", qty: 1}], tool: "techreborn:industrial_grinder"}} />
+<Machine config={{input: [{id: "techreborn:tin_ore", qty: 1}, {id: "techreborn:sodiumpersulfate_cell", qty: 1}], output: [{id: "techreborn:tin_dust", qty: 2}, {id: "techreborn:small_pile_of_iron_dust", qty: 1}, {id: "techreborn:zinc_dust", qty: 1}], tool: "techreborn:industrial_grinder"}} />
 
-<Machine next={{input: [{id: "techreborn:sphalerite_ore", qty: 1}, {id: "techreborn:water_cell", qty: 1}], output: [{id: "techreborn:sphalerite_dust", qty: 5}, {id: "techreborn:small_pile_of_yellow_garnet_dust", qty: 1}, {id: "techreborn:zinc_dust", qty: 1}], tool: "techreborn:industrial_grinder"}} />
+<Machine config={{input: [{id: "techreborn:sphalerite_ore", qty: 1}, {id: "techreborn:water_cell", qty: 1}], output: [{id: "techreborn:sphalerite_dust", qty: 5}, {id: "techreborn:small_pile_of_yellow_garnet_dust", qty: 1}, {id: "techreborn:zinc_dust", qty: 1}], tool: "techreborn:industrial_grinder"}} />
 
-<Machine next={{input: [{id: "techreborn:sphalerite_ore", qty: 1}, {id: "techreborn:sodiumpersulfate_cell", qty: 1}], output: [{id: "techreborn:sphalerite_dust", qty: 5}, {id: "techreborn:small_pile_of_yellow_garnet_dust", qty: 1}, {id: "techreborn:zinc_dust", qty: 1}], tool: "techreborn:industrial_grinder"}} />
+<Machine config={{input: [{id: "techreborn:sphalerite_ore", qty: 1}, {id: "techreborn:sodiumpersulfate_cell", qty: 1}], output: [{id: "techreborn:sphalerite_dust", qty: 5}, {id: "techreborn:small_pile_of_yellow_garnet_dust", qty: 1}, {id: "techreborn:zinc_dust", qty: 1}], tool: "techreborn:industrial_grinder"}} />
 
-<Machine next={{input: [{id: "techreborn:sphalerite_dust", qty: 2}], output: [{id: "techreborn:zinc_dust", qty: 1}, {id: "techreborn:sulfur_dust", qty: 1}], tool: "techreborn:industrial_electrolyzer"}} />
+<Machine config={{input: [{id: "techreborn:sphalerite_dust", qty: 2}], output: [{id: "techreborn:zinc_dust", qty: 1}, {id: "techreborn:sulfur_dust", qty: 1}], tool: "techreborn:industrial_electrolyzer"}} />
 
 ## Usage
 
 <CraftingTable recipe="input air air air input air techreborn:zinc_dust air input air air air output techreborn:small_pile_of_zinc_dust,4"/>
 
-<Machine next={{input: [{id: "techreborn:zinc_dust", qty: 1}], output: [{id: "techreborn:zinc_ingot", qty: 1}], tool: "techreborn:iron_furnace"}} />
+<Machine config={{input: [{id: "techreborn:zinc_dust", qty: 1}], output: [{id: "techreborn:zinc_ingot", qty: 1}], tool: "techreborn:iron_furnace"}} />
 
-<Machine next={{input: [{id: "techreborn:copper_dust", qty: 3}, {id: "techreborn:zinc_dust", qty: 1}], output: [{id: "techreborn:brass_ingot", qty: 4}], tool: "techreborn:alloy_smelter"}} />
+<Machine config={{input: [{id: "techreborn:copper_dust", qty: 3}, {id: "techreborn:zinc_dust", qty: 1}], output: [{id: "techreborn:brass_ingot", qty: 4}], tool: "techreborn:alloy_smelter"}} />
 
-<Machine next={{input: [{id: "techreborn:copper_ingot", qty: 3}, {id: "techreborn:zinc_dust", qty: 1}], output: [{id: "techreborn:brass_ingot", qty: 4}], tool: "techreborn:alloy_smelter"}} />
+<Machine config={{input: [{id: "techreborn:copper_ingot", qty: 3}, {id: "techreborn:zinc_dust", qty: 1}], output: [{id: "techreborn:brass_ingot", qty: 4}], tool: "techreborn:alloy_smelter"}} />
 
-<Machine next={{input: [{id: "techreborn:zinc_dust", qty: 1}], output: [{id: "techreborn:small_pile_of_tin_dust", qty: 1}], tool: "techreborn:industrial_centrifuge"}} />
+<Machine config={{input: [{id: "techreborn:zinc_dust", qty: 1}], output: [{id: "techreborn:small_pile_of_tin_dust", qty: 1}], tool: "techreborn:industrial_centrifuge"}} />
