--- a/docs/items/gems/peridot.mdx
+++ b/docs/items/gems/peridot.mdx
@@ -12,11 +12,11 @@ title: Peridot
 
 <CraftingTable recipe="input air air air input air techreborn:peridot_storage_block air input air air air output techreborn:peridot_gem,9" />
 
-<Machine next={{input: [{id: "techreborn:peridot_dust", qty: 4}, {id: "minecraft:tnt", qty: 16}], output: [{id: "techreborn:peridot_gem", qty: 3}, {id: "techreborn:dark_ashes_dust", qty: 12}], tool: "techreborn:implosion_compressor"}} />
+<Machine config={{input: [{id: "techreborn:peridot_dust", qty: 4}, {id: "minecraft:tnt", qty: 16}], output: [{id: "techreborn:peridot_gem", qty: 3}, {id: "techreborn:dark_ashes_dust", qty: 12}], tool: "techreborn:implosion_compressor"}} />
 
-<Machine next={{input: [{id: "techreborn:peridot_dust", qty: 4}, {id: "minecraft:end_crystal", qty: 4}], output: [{id: "techreborn:peridot_gem", qty: 3}, {id: "techreborn:small_pile_of_ender_eye_dust", qty: 4}], tool: "techreborn:implosion_compressor"}} />
+<Machine config={{input: [{id: "techreborn:peridot_dust", qty: 4}, {id: "minecraft:end_crystal", qty: 4}], output: [{id: "techreborn:peridot_gem", qty: 3}, {id: "techreborn:small_pile_of_ender_eye_dust", qty: 4}], tool: "techreborn:implosion_compressor"}} />
 
-<Machine next={{input: [{id: "techreborn:peridot_ore"}, {id: "techreborn:water_cell"}], output: [
+<Machine config={{input: [{id: "techreborn:peridot_ore"}, {id: "techreborn:water_cell"}], output: [
   {id: "techreborn:peridot_gem"},
   {id: "techreborn:peridot_small_dust", qty: 6},
   {id: "techreborn:emerald_small_dust", qty: 2}
