--- a/docs/items/gems/red_garnet.mdx
+++ b/docs/items/gems/red_garnet.mdx
@@ -10,7 +10,7 @@ title: Red Garnet
 
 <CraftingTable recipe="input air air air input air techreborn:block_of_red_garnet air input air air air output techreborn:red_garnet,9" />
 
-<Machine next={{input: [{id: "techreborn:red_garnet_dust", qty: 4}, {id: "minecraft:TNT", qty: 16}], output: [{id: "techreborn:red_garnet", qty: 3}, {id: "techreborn:dark_ashes", qty: 8}], tool: "techreborn:implosion_compressor"}} />
+<Machine config={{input: [{id: "techreborn:red_garnet_dust", qty: 4}, {id: "minecraft:TNT", qty: 16}], output: [{id: "techreborn:red_garnet", qty: 3}, {id: "techreborn:dark_ashes", qty: 8}], tool: "techreborn:implosion_compressor"}} />
 
 ## Usage
 
