--- a/docs/items/gems/ruby.mdx
+++ b/docs/items/gems/ruby.mdx
@@ -10,11 +10,11 @@ title: Ruby
 
 <CraftingTable recipe="input air air air input air techreborn:block_of_ruby air input air air air output techreborn:ruby,9" />
 
-<Machine next={{input: [{id: "techreborn:ruby_dust", qty: 4}, {id: "minecraft:TNT", qty: 16}], output: [{id: "techreborn:ruby", qty: 3}, {id: "techreborn:dark_ashes", qty: 12}], tool: "techreborn:implosion_compressor"}} />
+<Machine config={{input: [{id: "techreborn:ruby_dust", qty: 4}, {id: "minecraft:TNT", qty: 16}], output: [{id: "techreborn:ruby", qty: 3}, {id: "techreborn:dark_ashes", qty: 12}], tool: "techreborn:implosion_compressor"}} />
 
-<Machine next={{input: [{id: "techreborn:ruby_dust", qty: 4}, {id: "minecraft:end_crystal", qty: 4}], output: [{id: "techreborn:ruby", qty: 3}, {id: "techreborn:small_pile_of_ender_eye_dust", qty: 4}], tool: "techreborn:implosion_compressor"}} />
+<Machine config={{input: [{id: "techreborn:ruby_dust", qty: 4}, {id: "minecraft:end_crystal", qty: 4}], output: [{id: "techreborn:ruby", qty: 3}, {id: "techreborn:small_pile_of_ender_eye_dust", qty: 4}], tool: "techreborn:implosion_compressor"}} />
 
-<Machine next={{input: [{id: "techreborn:ruby_ore"}, {id: "techreborn:water_cell"}], output: [
+<Machine config={{input: [{id: "techreborn:ruby_ore"}, {id: "techreborn:water_cell"}], output: [
   {id: "techreborn:ruby"},
   {id: "techreborn:small_pile_of_ruby_dust", qty: 6},
   {id: "techreborn:small_pile_of_red_garnet_dust", qty: 2}
