--- a/docs/items/gems/sapphire.mdx
+++ b/docs/items/gems/sapphire.mdx
@@ -10,9 +10,9 @@ title: Sapphire
 
 <CraftingTable recipe="input air air air input air techreborn:block_of_sapphire air input air air air output techreborn:sapphire,9" />
 
-<Machine next={{input: [{id: "techreborn:sapphire_dust", qty: 4}, {id: "minecraft:TNT", qty: 16}], output: [{id: "techreborn:sapphire", qty: 3}, {id: "techreborn:dark_ashes", qty: 12}], tool: "techreborn:implosion_compressor"}} />
+<Machine config={{input: [{id: "techreborn:sapphire_dust", qty: 4}, {id: "minecraft:TNT", qty: 16}], output: [{id: "techreborn:sapphire", qty: 3}, {id: "techreborn:dark_ashes", qty: 12}], tool: "techreborn:implosion_compressor"}} />
 
-<Machine next={{input: [{id: "techreborn:sapphire_ore"}, {id: "techreborn:water_cell"}], output: [
+<Machine config={{input: [{id: "techreborn:sapphire_ore"}, {id: "techreborn:water_cell"}], output: [
   {id: "techreborn:sapphire"},
   {id: "techreborn:small_pile_of_sapphire_dust", qty: 6},
   {id: "techreborn:small_pile_of_peridot", qty: 2}
