--- a/docs/items/ingots/chrome_ingot.mdx
+++ b/docs/items/ingots/chrome_ingot.mdx
@@ -31,8 +31,8 @@ This recipe require 1700 heat.
 
 <CraftingTable recipe="input air techreborn:chrome_ingot air air air air air air air output techreborn:chrome_nugget,9"/>
 
-<Machine next={{input: [{id: "techreborn:chrome_ingot"}], output: [{id: "techreborn:chrome_plate"}], tool: "techreborn:compressor"}} />
+<Machine config={{input: [{id: "techreborn:chrome_ingot"}], output: [{id: "techreborn:chrome_plate"}], tool: "techreborn:compressor"}} />
 
-<Machine next={{input: [{id: "techreborn:chrome_ingot"}], output: [{id: "techreborn:chrome_dust"}], tool: "techreborn:grinder"}} />
+<Machine config={{input: [{id: "techreborn:chrome_ingot"}], output: [{id: "techreborn:chrome_dust"}], tool: "techreborn:grinder"}} />
 
 <Machine recipe="input air techreborn:nickel_ingot air input techreborn:nickel_ingot techreborn:chrome_ingot techreborn:nickel_ingot input air techreborn:nickel_ingot air output techreborn:nichrome_heating_coil,2 tool techreborn:rolling_machine" />
