--- a/docs/items/ingots/lead_ingot.mdx
+++ b/docs/items/ingots/lead_ingot.mdx
@@ -17,8 +17,8 @@ title: Lead Ingot
 <Machine recipe="input techreborn:lead_ore output techreborn:lead_ingot tool techreborn:iron_furnace" />
 <Machine recipe="input techreborn:deepslate_lead_ore output techreborn:lead_ingot tool techreborn:iron_furnace" />
 
-<Machine next={{input: [{id: "techreborn:galena_small_dust", qty: 8}], output: [{id: "techreborn:lead_ingot"}, {id: "techreborn:silver_ingot"}], tool: "techreborn:blast_furnace"}} />
-<Machine next={{input: [{id: "techreborn:galena_dust", qty: 2}], output: [{id: "techreborn:lead_ingot"}, {id: "techreborn:silver_ingot"}], tool: "techreborn:blast_furnace"}} />
+<Machine config={{input: [{id: "techreborn:galena_small_dust", qty: 8}], output: [{id: "techreborn:lead_ingot"}, {id: "techreborn:silver_ingot"}], tool: "techreborn:blast_furnace"}} />
+<Machine config={{input: [{id: "techreborn:galena_dust", qty: 2}], output: [{id: "techreborn:lead_ingot"}, {id: "techreborn:silver_ingot"}], tool: "techreborn:blast_furnace"}} />
 
 ## Usage
 
@@ -28,4 +28,4 @@ title: Lead Ingot
 - <McItem slug="techreborn:lead_storage_block"/>
 - <McItem slug="techreborn:red_cell_battery"/>
 
-<Machine next={{input: [{id: "techreborn:lead_ingot"}], output: [{id: "techreborn:lead_plate"}], tool: "techreborn:compressor"}} />
+<Machine config={{input: [{id: "techreborn:lead_ingot"}], output: [{id: "techreborn:lead_plate"}], tool: "techreborn:compressor"}} />
