--- a/docs/items/ingots/nickel_ingot.mdx
+++ b/docs/items/ingots/nickel_ingot.mdx
@@ -23,11 +23,11 @@ title: Nickel Ingot
 <CraftingTable recipe="input techreborn:nickel_ingot techreborn:nickel_ingot techreborn:nickel_ingot input techreborn:nickel_ingot techreborn:nickel_ingot techreborn:nickel_ingot input techreborn:nickel_ingot techreborn:nickel_ingot techreborn:nickel_ingot output techreborn:nickel_storage_block"/>
 <CraftingTable recipe="input air air air input air techreborn:nickel_ingot air input air air air output techreborn:nickel_nugget,9"/>
 
-<Machine next={{input: [{id: "minecraft:iron_ingot", qty: 2}, {id: "techreborn:nickel_ingot"}], output: [{id: "techreborn:invar_ingot", qty: 3}], tool: "techreborn:alloy_smelter"}} />
+<Machine config={{input: [{id: "minecraft:iron_ingot", qty: 2}, {id: "techreborn:nickel_ingot"}], output: [{id: "techreborn:invar_ingot", qty: 3}], tool: "techreborn:alloy_smelter"}} />
 
-<Machine next={{input: [{id: "techreborn:nickel_ingot"}], output: [{id: "techreborn:nickel_dust"}], tool: "techreborn:grinder"}} />
+<Machine config={{input: [{id: "techreborn:nickel_ingot"}], output: [{id: "techreborn:nickel_dust"}], tool: "techreborn:grinder"}} />
 
-<Machine next={{input: [{id: "techreborn:nickel_ingot"}], output: [{id: "techreborn:nickel_plate"}], tool: "techreborn:compressor"}} />
+<Machine config={{input: [{id: "techreborn:nickel_ingot"}], output: [{id: "techreborn:nickel_plate"}], tool: "techreborn:compressor"}} />
 
 <Machine recipe="input techreborn:nickel_ingot techreborn:copper_ingot techreborn:nickel_ingot input techreborn:copper_ingot air techreborn:copper_ingot input techreborn:nickel_ingot techreborn:copper_ingot techreborn:nickel_ingot output techreborn:cupronickel_heating_coil,3 tool techreborn:rolling_machine" />
 
