--- a/docs/items/ingots/platinum_ingot.mdx
+++ b/docs/items/ingots/platinum_ingot.mdx
@@ -25,6 +25,6 @@ title: Platinum Ingot
 <CraftingTable recipe="input techreborn:platinum_ingot techreborn:platinum_ingot techreborn:platinum_ingot input techreborn:platinum_ingot techreborn:platinum_ingot techreborn:platinum_ingot input techreborn:platinum_ingot techreborn:platinum_ingot techreborn:platinum_ingot output techreborn:platinum_storage_block"/>
 <CraftingTable recipe="input air air air input air techreborn:platinum_ingot air input air air air output techreborn:platinum_nugget,9"/>
 
-<Machine next={{input: [{id: "techreborn:platinum_ingot"}], output: [{id: "techreborn:platinum_dust"}], tool: "techreborn:grinder"}} />
+<Machine config={{input: [{id: "techreborn:platinum_ingot"}], output: [{id: "techreborn:platinum_dust"}], tool: "techreborn:grinder"}} />
 
-<Machine next={{input: [{id: "techreborn:platinum_ingot"}], output: [{id: "techreborn:platinum_plate"}], tool: "techreborn:compressor"}} />
+<Machine config={{input: [{id: "techreborn:platinum_ingot"}], output: [{id: "techreborn:platinum_plate"}], tool: "techreborn:compressor"}} />
