--- a/docs/items/ingots/steel_ingot.mdx
+++ b/docs/items/ingots/steel_ingot.mdx
@@ -13,14 +13,14 @@ title: Steel Ingot
 <CraftingTable recipe="input techreborn:steel_nugget techreborn:steel_nugget techreborn:steel_nugget input techreborn:steel_nugget techreborn:steel_nugget techreborn:steel_nugget input techreborn:steel_nugget techreborn:steel_nugget techreborn:steel_nugget output techreborn:steel_ingot"/>
 <CraftingTable recipe="input air air air input air techreborn:steel_storage_block air input air air air output techreborn:steel_ingot,9"/>
 
-<Machine next={{input: [{id: "techreborn:refined_iron_ingot"}, {id: "techreborn:coal_dust", qty: 4}], output: [{id: "techreborn:steel_ingot"}, {id: "techreborn:dark_ashes_dust", qty: 2}], tool: "techreborn:blast_furnace"}} />
+<Machine config={{input: [{id: "techreborn:refined_iron_ingot"}, {id: "techreborn:coal_dust", qty: 4}], output: [{id: "techreborn:steel_ingot"}, {id: "techreborn:dark_ashes_dust", qty: 2}], tool: "techreborn:blast_furnace"}} />
 
-<Machine next={{input: [{id: "techreborn:refined_iron_ingot"}, {id: "techreborn:carbon_cell", qty: 2}], output: [{id: "techreborn:steel_ingot"}, {id: "techreborn:empty_cell", qty: 2}], tool: "techreborn:blast_furnace"}} />
+<Machine config={{input: [{id: "techreborn:refined_iron_ingot"}, {id: "techreborn:carbon_cell", qty: 2}], output: [{id: "techreborn:steel_ingot"}, {id: "techreborn:empty_cell", qty: 2}], tool: "techreborn:blast_furnace"}} />
 
-<Machine next={{input: [{id: "techreborn:steel_helmet"}, {id: "minecraft:sand"}], output: [{id: "techreborn:steel_ingot", qty: 3}, {id: "techreborn:dark_ashes_dust"}], tool: "techreborn:blast_furnace"}} />
-<Machine next={{input: [{id: "techreborn:steel_chestplate"}, {id: "minecraft:sand"}], output: [{id: "techreborn:steel_ingot", qty: 5}, {id: "techreborn:dark_ashes_dust"}], tool: "techreborn:blast_furnace"}} />
-<Machine next={{input: [{id: "techreborn:steel_leggings"}, {id: "minecraft:sand"}], output: [{id: "techreborn:steel_ingot", qty: 4}, {id: "techreborn:dark_ashes_dust"}], tool: "techreborn:blast_furnace"}} />
-<Machine next={{input: [{id: "techreborn:steel_boots"}, {id: "minecraft:sand"}], output: [{id: "techreborn:steel_ingot", qty: 2}, {id: "techreborn:dark_ashes_dust"}], tool: "techreborn:blast_furnace"}} />
+<Machine config={{input: [{id: "techreborn:steel_helmet"}, {id: "minecraft:sand"}], output: [{id: "techreborn:steel_ingot", qty: 3}, {id: "techreborn:dark_ashes_dust"}], tool: "techreborn:blast_furnace"}} />
+<Machine config={{input: [{id: "techreborn:steel_chestplate"}, {id: "minecraft:sand"}], output: [{id: "techreborn:steel_ingot", qty: 5}, {id: "techreborn:dark_ashes_dust"}], tool: "techreborn:blast_furnace"}} />
+<Machine config={{input: [{id: "techreborn:steel_leggings"}, {id: "minecraft:sand"}], output: [{id: "techreborn:steel_ingot", qty: 4}, {id: "techreborn:dark_ashes_dust"}], tool: "techreborn:blast_furnace"}} />
+<Machine config={{input: [{id: "techreborn:steel_boots"}, {id: "minecraft:sand"}], output: [{id: "techreborn:steel_ingot", qty: 2}, {id: "techreborn:dark_ashes_dust"}], tool: "techreborn:blast_furnace"}} />
 
 <Machine recipe="input techreborn:steel_dust output techreborn:steel_ingot tool techreborn:blast_furnace" />
 
@@ -37,8 +37,8 @@ title: Steel Ingot
 - <McItem slug="techreborn:steel_storage_block"/>
 - <McItem slug="techreborn:steel_helmet"/>, <McItem slug="techreborn:steel_chestplate"/>, <McItem slug="techreborn:steel_leggings"/>, <McItem slug="techreborn:steel_boots"/>
 
-<Machine next={{input: [{id: "techreborn:steel_ingot"}], output: [{id: "techreborn:steel_plate"}], tool: "techreborn:compressor"}} />
+<Machine config={{input: [{id: "techreborn:steel_ingot"}], output: [{id: "techreborn:steel_plate"}], tool: "techreborn:compressor"}} />
 
-<Machine next={{input: [{id: "techreborn:steel_ingot"}], output: [{id: "techreborn:steel_dust"}], tool: "techreborn:grinder"}} />
+<Machine config={{input: [{id: "techreborn:steel_ingot"}], output: [{id: "techreborn:steel_dust"}], tool: "techreborn:grinder"}} />
 
-<Machine next={{input: [{id: "techreborn:steel_ingot"}, {id: "techreborn:tungsten_ingot"}], output: [{id: "techreborn:hot_tungstensteel_ingot"}, {id: "techreborn:dark_ashes_dust"}], tool: "techreborn:blast_furnace"}} />
+<Machine config={{input: [{id: "techreborn:steel_ingot"}, {id: "techreborn:tungsten_ingot"}], output: [{id: "techreborn:hot_tungstensteel_ingot"}, {id: "techreborn:dark_ashes_dust"}], tool: "techreborn:blast_furnace"}} />
