--- a/docs/items/ingots/tungsten_ingot.mdx
+++ b/docs/items/ingots/tungsten_ingot.mdx
@@ -29,6 +29,6 @@ title: Tungsten Ingot
 - <McItem slug="techreborn:energy_flow_chip"/>
 - <McItem slug="techreborn:mixed_metal_ingot"/>
 
-<Machine next={{input: [{id: "techreborn:steel_ingot"}, {id: "techreborn:tungsten_ingot"}], output: [{id: "techreborn:hot_tungstensteel_ingot"}, {id: "techreborn:dark_ashes_dust"}], tool: "techreborn:blast_furnace"}} />
+<Machine config={{input: [{id: "techreborn:steel_ingot"}, {id: "techreborn:tungsten_ingot"}], output: [{id: "techreborn:hot_tungstensteel_ingot"}, {id: "techreborn:dark_ashes_dust"}], tool: "techreborn:blast_furnace"}} />
 
 <Machine recipe="input techreborn:tungsten_ingot output techreborn:tungsten_plate tool techreborn:compressor" />
