--- a/docs/items/ingots/zinc_ingot.mdx
+++ b/docs/items/ingots/zinc_ingot.mdx
@@ -25,8 +25,8 @@ title: Zinc Ingot
 - <McItem slug="techreborn:zinc_nugget"/>
 - <McItem slug="techreborn:mixed_metal_ingot"/>
 
-<Machine next={{input: [{id: "minecraft:copper_ingot", qty: 3}, {id: "techreborn:zinc_ingot"}], output: [{id: "techreborn:brass_ingot", qty: 4}], tool: "techreborn:alloy_smelter"}} />
+<Machine config={{input: [{id: "minecraft:copper_ingot", qty: 3}, {id: "techreborn:zinc_ingot"}], output: [{id: "techreborn:brass_ingot", qty: 4}], tool: "techreborn:alloy_smelter"}} />
 
-<Machine next={{input: [{id: "techreborn:zinc_ingot"}], output: [{id: "techreborn:zinc_dust"}], tool: "techreborn:grinder"}} />
+<Machine config={{input: [{id: "techreborn:zinc_ingot"}], output: [{id: "techreborn:zinc_dust"}], tool: "techreborn:grinder"}} />
 
-<Machine next={{input: [{id: "techreborn:zinc_ingot"}], output: [{id: "techreborn:zinc_plate"}], tool: "techreborn:compressor"}} />
+<Machine config={{input: [{id: "techreborn:zinc_ingot"}], output: [{id: "techreborn:zinc_plate"}], tool: "techreborn:compressor"}} />
