--- a/docs/items/dusts/andradite_dust.mdx
+++ b/docs/items/dusts/andradite_dust.mdx
@@ -12,7 +12,7 @@ title: Andradite Dust
 
 <CraftingTable recipe="input techreborn:small_pile_of_andradite_dust techreborn:small_pile_of_andradite_dust air input techreborn:small_pile_of_andradite_dust techreborn:small_pile_of_andradite_dust air input air air air output techreborn:andradite_dust"/>
 
-<Machine next={{input: [{id: "techreborn:yellow_garnet_dust", qty: 16}], output: [
+<Machine config={{input: [{id: "techreborn:yellow_garnet_dust", qty: 16}], output: [
   {id: "techreborn:andradite_dust", qty: 5},
   {id: "techreborn:grossular_dust", qty: 8},
   {id: "techreborn:uvarovite_dust", qty: 3}
@@ -22,7 +22,7 @@ title: Andradite Dust
 
 **Andradite Dust** could be further processed in <McItem slug="techreborn:industrial_electrolyzer" />
 
-<Machine next={{input: [
+<Machine config={{input: [
   {id: "techreborn:andradite_dust", qty: 20},
   {id: "techreborn:empty_cell", qty: 12}
 ], output: [
