--- a/docs/items/dusts/bronze_dust.mdx
+++ b/docs/items/dusts/bronze_dust.mdx
@@ -10,14 +10,14 @@ title: Bronze Dust
 
 ## Recipe
 
-<Machine next={{input: [{id: "techreborn:bronze_ingot"}], output: [{id: "techreborn:bronze_dust"}], tool: "techreborn:grinder"}} />
+<Machine config={{input: [{id: "techreborn:bronze_ingot"}], output: [{id: "techreborn:bronze_dust"}], tool: "techreborn:grinder"}} />
 
 ## Usage
 
 **Smelting recipe:**  
-<Machine next={{input: [{id: "techreborn:bronze_dust"}], output: [{id: "techreborn:bronze_ingot"}], tool: "techreborn:iron_furnace"}} />
+<Machine config={{input: [{id: "techreborn:bronze_dust"}], output: [{id: "techreborn:bronze_ingot"}], tool: "techreborn:iron_furnace"}} />
 
-<Machine next={{input: [{id: "techreborn:bronze_dust"}], output: [
+<Machine config={{input: [{id: "techreborn:bronze_dust"}], output: [
   {id: "techreborn:copper_nugget", qty: 6},
   {id: "techreborn:tin_nugget", qty: 3}
 ], tool: "techreborn:industrial_centrifuge"}} />
