--- a/docs/items/dusts/dark_ashes.mdx
+++ b/docs/items/dusts/dark_ashes.mdx
@@ -12,7 +12,7 @@ title: Dark Ashes
 
 <CraftingTable recipe="input techreborn:small_pile_of_dark_ashes techreborn:small_pile_of_dark_ashes air input techreborn:small_pile_of_dark_ashes techreborn:small_pile_of_dark_ashes air input air air air output techreborn:dark_ashes"/>
 
-<Machine next={{input: [
+<Machine config={{input: [
   {id: "minecraft:iron_ingot"},
   {id: "techreborn:coal_dust", qty: 2}
 ], output: [
@@ -20,7 +20,7 @@ title: Dark Ashes
   {id: "techreborn:dark_ashes", qty: 2}
 ], tool: "techreborn:blast_furnace"}} />
 
-<Machine next={{input: [
+<Machine config={{input: [
   {id: "techreborn:steel_ingot"},
   {id: "techreborn:tungsten_ingot"}
 ], output: [
@@ -28,14 +28,14 @@ title: Dark Ashes
   {id: "techreborn:dark_ashes", qty: 4}
 ], tool: "techreborn:blast_furnace"}} />
 
-<Machine next={{input: [{id: "techreborn:basalt_dust", qty: 16}], output: [
+<Machine config={{input: [{id: "techreborn:basalt_dust", qty: 16}], output: [
   {id: "techreborn:peridot_dust"},
   {id: "techreborn:calcite_dust", qty: 3},
   {id: "techreborn:flint_dust", qty: 8},
   {id: "techreborn:dark_ashes", qty: 4}
 ], tool: "techreborn:industrial_centrifuge"}} />
 
-<Machine next={{input: [{id: "minecraft:blaze_powder", qty: 4}], output: [
+<Machine config={{input: [{id: "minecraft:blaze_powder", qty: 4}], output: [
   {id: "techreborn:dark_ashes"},
   {id: "techreborn:sulfur_dust"}
 ], tool: "techreborn:industrial_electrolyzer"}} />
@@ -44,4 +44,4 @@ title: Dark Ashes
 
 <CraftingTable recipe="input air air air input air techreborn:dark_ashes air input air air air output techreborn:small_pile_of_dark_ashes,4"/>
 
-<Machine next={{input: [{id: "techreborn:dark_ashes", qty: 2}], output: [{id: "techreborn:ashes", qty: 2}], tool: "techreborn:industrial_centrifuge"}} />
+<Machine config={{input: [{id: "techreborn:dark_ashes", qty: 2}], output: [{id: "techreborn:ashes", qty: 2}], tool: "techreborn:industrial_centrifuge"}} />
