--- a/docs/items/dusts/lazurite_dust.mdx
+++ b/docs/items/dusts/lazurite_dust.mdx
@@ -12,14 +12,14 @@ title: Lazurite Dust
 
 <CraftingTable recipe="input techreborn:small_pile_of_lazurite_dust techreborn:small_pile_of_lazurite_dust air input techreborn:small_pile_of_lazurite_dust techreborn:small_pile_of_lazurite_dust air input air air air output techreborn:lazurite_dust"/>
 
-<Machine next={{input: [{id: "minecraft:lapis_lazuli"}], output: [
+<Machine config={{input: [{id: "minecraft:lapis_lazuli"}], output: [
   {id: "techreborn:lazurite_dust", qty: 3},
   {id: "techreborn:small_pile_of_pyrite_dust"},
   {id: "techreborn:small_pile_of_calcite_dust"},
   {id: "techreborn:small_pile_of_sodalite_dust", qty: 2}
 ], tool: "techreborn:industrial_centrifuge"}} />
 
-<Machine next={{input: [
+<Machine config={{input: [
   {id: "minecraft:lapis_lazuli_ore"},
   {id: "techreborn:water_cell"}
 ], output: [
@@ -31,7 +31,7 @@ title: Lazurite Dust
 
 <CraftingTable recipe="input air air air input air techreborn:lazurite_dust air input air air air output techreborn:small_pile_of_lazurite_dust,4"/>
 
-<Machine next={{input: [
+<Machine config={{input: [
   {id: "techreborn:lazurite_dust", qty: 29},
   {id: "techreborn:empty_cell", qty: 10}
 ], output: [
@@ -41,4 +41,4 @@ title: Lazurite Dust
   {id: "techreborn:sodium_cell", qty: 4}
 ], tool: "techreborn:industrial_electrolyzer"}} />
 
-<Machine next={{input: [{id: "techreborn:lazurite_dust", qty: 8}], output: [{id: "techreborn:lazurite_plate"}], tool: "techreborn:compressor"}} />
+<Machine config={{input: [{id: "techreborn:lazurite_dust", qty: 8}], output: [{id: "techreborn:lazurite_plate"}], tool: "techreborn:compressor"}} />
