--- a/docs/items/dusts/red_garnet_dust.mdx
+++ b/docs/items/dusts/red_garnet_dust.mdx
@@ -12,9 +12,9 @@ title: Red Garnet Dust
 
 <CraftingTable recipe="input techreborn:small_pile_of_red_garnet_dust techreborn:small_pile_of_red_garnet_dust air input techreborn:small_pile_of_red_garnet_dust techreborn:small_pile_of_red_garnet_dust air input air air air output techreborn:red_garnet_dust"/>
 
-<Machine next={{input: [{id: "techreborn:red_garnet"}], output: [{id: "techreborn:red_garnet_dust"}], tool: "techreborn:grinder"}} />
+<Machine config={{input: [{id: "techreborn:red_garnet"}], output: [{id: "techreborn:red_garnet_dust"}], tool: "techreborn:grinder"}} />
 
-<Machine next={{input: [
+<Machine config={{input: [
   {id: "minecraft:block_of_redstone", qty: 9},
   {id: "minecraft:tnt", qty: 16}
 ], output: [
@@ -24,7 +24,7 @@ title: Red Garnet Dust
 
 ## Usage
 
-<Machine next={{input: [{id: "techreborn:red_garnet_dust", qty: 16}], output: [
+<Machine config={{input: [{id: "techreborn:red_garnet_dust", qty: 16}], output: [
   {id: "techreborn:pyrope_dust", qty: 3},
   {id: "techreborn:almandine_dust", qty: 5},
   {id: "techreborn:spessartine_dust", qty: 8}
@@ -32,7 +32,7 @@ title: Red Garnet Dust
 
 <CraftingTable recipe="input air air air input air techreborn:red_garnet_dust air input air air air output techreborn:small_pile_of_red_garnet_dust,4"/>
 
-<Machine next={{input: [
+<Machine config={{input: [
   {id: "techreborn:red_garnet_dust", qty: 4},
   {id: "minecraft:tnt", qty: 16}
 ], output: [
