--- a/docs/items/dusts/uvarovite_dust.mdx
+++ b/docs/items/dusts/uvarovite_dust.mdx
@@ -12,10 +12,10 @@ title: Uvarovite Dust
 
 <CraftingTable recipe="input techreborn:small_pile_of_uvarovite_dust techreborn:small_pile_of_uvarovite_dust air input techreborn:small_pile_of_uvarovite_dust techreborn:small_pile_of_uvarovite_dust air input air air air output techreborn:uvarovite_dust"/>
 
-<Machine next={{input: [{id: "techreborn:yellow_garnet_dust", qty: 16}], output: [{id: "techreborn:andradite_dust", qty: 5}, {id: "techreborn:grossular_dust", qty: 8}, {id: "techreborn:uvarovite_dust", qty: 3}], tool: "techreborn:industrial_centrifuge"}} />
+<Machine config={{input: [{id: "techreborn:yellow_garnet_dust", qty: 16}], output: [{id: "techreborn:andradite_dust", qty: 5}, {id: "techreborn:grossular_dust", qty: 8}, {id: "techreborn:uvarovite_dust", qty: 3}], tool: "techreborn:industrial_centrifuge"}} />
 
 ## Usage
 
-<Machine next={{input: [{id: "techreborn:uvarovite_dust", qty: 20}, {id: "techreborn:empty_cell", qty: 12}], output: [{id: "techreborn:calcium_cell", qty: 3}, {id: "techreborn:chrome_dust", qty: 2}, {id: "techreborn:silicon_cell", qty: 3}, {id: "techreborn:compressed_air_cell", qty: 6}], tool: "techreborn:industrial_electrolyzer"}} />
+<Machine config={{input: [{id: "techreborn:uvarovite_dust", qty: 20}, {id: "techreborn:empty_cell", qty: 12}], output: [{id: "techreborn:calcium_cell", qty: 3}, {id: "techreborn:chrome_dust", qty: 2}, {id: "techreborn:silicon_cell", qty: 3}, {id: "techreborn:compressed_air_cell", qty: 6}], tool: "techreborn:industrial_electrolyzer"}} />
 
 <CraftingTable recipe="input air air air input air techreborn:uvarovite_dust air input air air air output techreborn:small_pile_of_uvarovite_dust,4"/>
