--- a/docs/items/ingots/aluminum_ingot.mdx
+++ b/docs/items/ingots/aluminum_ingot.mdx
@@ -14,7 +14,7 @@ title: Aluminum Ingot
 <CraftingTable recipe="input air air air input air techreborn:aluminum_storage_block air input air air air output techreborn:aluminum_ingot,9"/>
 
 
-<Machine next={{input: [{id: "techreborn:aluminum_dust"}], output: [{id: "techreborn:aluminum_ingot"}], tool: "techreborn:blast_furnace"}} />
+<Machine config={{input: [{id: "techreborn:aluminum_dust"}], output: [{id: "techreborn:aluminum_ingot"}], tool: "techreborn:blast_furnace"}} />
 This recipe requires 1700 heat.
 
 ## Usage
@@ -26,8 +26,8 @@ This recipe requires 1700 heat.
 - <McItem slug="techreborn:aluminum_nugget" inline={true}/>
 - <McItem slug="techreborn:aluminum_storage_block" inline={true}/>
 
-<Machine next={{input: [{id: "techreborn:aluminum_ingot"}], output: [{id: "techreborn:aluminum_plate"}], tool: "techreborn:compressor"}} />
+<Machine config={{input: [{id: "techreborn:aluminum_ingot"}], output: [{id: "techreborn:aluminum_plate"}], tool: "techreborn:compressor"}} />
 
-<Machine next={{input: [{id: "techreborn:aluminum_ingot"}], output: [{id: "techreborn:aluminum_dust"}], tool: "techreborn:grinder"}} />
+<Machine config={{input: [{id: "techreborn:aluminum_ingot"}], output: [{id: "techreborn:aluminum_dust"}], tool: "techreborn:grinder"}} />
 
 <Machine recipe="input techreborn:aluminum_ingot techreborn:aluminum_ingot techreborn:aluminum_ingot input techreborn:magnesium_dust techreborn:magnesium_dust techreborn:magnesium_dust input techreborn:aluminum_ingot techreborn:aluminum_ingot techreborn:aluminum_ingot output techreborn:magnalium_plate,3 tool techreborn:rolling_machine" />
