--- a/docs/items/ingots/brass_ingot.mdx
+++ b/docs/items/ingots/brass_ingot.mdx
@@ -13,7 +13,7 @@ title: Brass Ingot
 <CraftingTable recipe="input techreborn:brass_nugget techreborn:brass_nugget techreborn:brass_nugget input techreborn:brass_nugget techreborn:brass_nugget techreborn:brass_nugget input techreborn:brass_nugget techreborn:brass_nugget techreborn:brass_nugget output techreborn:brass_ingot"/>
 <CraftingTable recipe="input air air air input air techreborn:brass_storage_block air input air air air output techreborn:brass_ingot,9"/>
 
-<Machine next={{input: [{id: "minecraft:copper_ingot", qty: 3}, {id: "techreborn:zinc_ingot"}], output: [{id: "techreborn:brass_ingot", qty: 4}], tool: "techreborn:alloy_smelter"}} />
+<Machine config={{input: [{id: "minecraft:copper_ingot", qty: 3}, {id: "techreborn:zinc_ingot"}], output: [{id: "techreborn:brass_ingot", qty: 4}], tool: "techreborn:alloy_smelter"}} />
 
 <Machine recipe="input techreborn:brass_dust output techreborn:brass_ingot tool techreborn:iron_furnace" />
 
@@ -27,6 +27,6 @@ title: Brass Ingot
 - <McItem slug="techreborn:brass_storage_block" inline={true}/>
 - <McItem slug="techreborn:mixed_metal_ingot" inline={true}/>
 
-<Machine next={{input: [{id: "techreborn:brass_ingot"}], output: [{id: "techreborn:brass_plate"}], tool: "techreborn:compressor"}} />
+<Machine config={{input: [{id: "techreborn:brass_ingot"}], output: [{id: "techreborn:brass_plate"}], tool: "techreborn:compressor"}} />
 
-<Machine next={{input: [{id: "techreborn:brass_ingot"}], output: [{id: "techreborn:brass_dust"}], tool: "techreborn:grinder"}} />
+<Machine config={{input: [{id: "techreborn:brass_ingot"}], output: [{id: "techreborn:brass_dust"}], tool: "techreborn:grinder"}} />
