--- a/docs/items/ingots/electrum_ingot.mdx
+++ b/docs/items/ingots/electrum_ingot.mdx
@@ -13,7 +13,7 @@ title: Electrum Ingot
 <CraftingTable recipe="input techreborn:electrum_nugget techreborn:electrum_nugget techreborn:electrum_nugget input techreborn:electrum_nugget techreborn:electrum_nugget techreborn:electrum_nugget input techreborn:electrum_nugget techreborn:electrum_nugget techreborn:electrum_nugget output techreborn:electrum_ingot"/>
 <CraftingTable recipe="input air air air input air techreborn:electrum_storage_block air input air air air output techreborn:electrum_ingot,9"/>
 
-<Machine next={{input: [{id: "minecraft:gold_ingot"}, {id: "techreborn:silver_ingot"}], output: [{id: "techreborn:electrum_ingot", qty: 2}], tool: "techreborn:alloy_smelter"}} />
+<Machine config={{input: [{id: "minecraft:gold_ingot"}, {id: "techreborn:silver_ingot"}], output: [{id: "techreborn:electrum_ingot", qty: 2}], tool: "techreborn:alloy_smelter"}} />
 
 <Machine recipe="input techreborn:electrum_dust output techreborn:electrum_ingot tool techreborn:iron_furnace" />
 
