--- a/docs/items/ingots/invar_ingot.mdx
+++ b/docs/items/ingots/invar_ingot.mdx
@@ -15,7 +15,7 @@ title: Invar Ingot
 
 <Machine recipe="input techreborn:invar_dust output techreborn:invar_ingot tool minecraft:furnace" />
 
-<Machine next={{input: [{id: "minecraft:iron_ingot", qty: 2}, {id: "techreborn:nickel_ingot"}], output: [{id: "techreborn:invar_ingot", qty: 3}], tool: "techreborn:alloy_smelter"}} />
+<Machine config={{input: [{id: "minecraft:iron_ingot", qty: 2}, {id: "techreborn:nickel_ingot"}], output: [{id: "techreborn:invar_ingot", qty: 3}], tool: "techreborn:alloy_smelter"}} />
 
 ## Usage
 
@@ -26,6 +26,6 @@ title: Invar Ingot
 - <McItem slug="techreborn:invar_nugget"/>
 - <McItem slug="techreborn:invar_storage_block"/>
 
-<Machine next={{input: [{id: "techreborn:invar_ingot"}], output: [{id: "techreborn:invar_plate"}], tool: "techreborn:compressor"}} />
+<Machine config={{input: [{id: "techreborn:invar_ingot"}], output: [{id: "techreborn:invar_plate"}], tool: "techreborn:compressor"}} />
 
-<Machine next={{input: [{id: "techreborn:invar_ingot"}], output: [{id: "techreborn:invar_dust"}], tool: "techreborn:grinder"}} />
+<Machine config={{input: [{id: "techreborn:invar_ingot"}], output: [{id: "techreborn:invar_dust"}], tool: "techreborn:grinder"}} />
